examples/negative/pub_enforcement/pub_field_priv_type.kai
# Negative fixture (priv-fields lane): a `pub type` whose record
# field carries no `priv` qualifier (public by default) and whose
# field type is a non-pub type from the same module — the field is
# externally readable but its type is invisible to the consumer.
# The walker rejects up front; the fix is either marking `Tree`
# pub or marking the field `priv`.

type Tree = TLeaf | TNode(Int, Tree, Tree)

pub type Map = { root: Tree }

fn main() : Int = 0
